[package]
name = "myblog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.9.0"
chrono = "0.4.9"

actix-web = "4.2.1"

bson = "2.4.0"
mongodb = "2.3.0"

once_cell = "1.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.13"

thiserror = "1.0"
anyhow = "1.0"

autowired = "0.1.8"
inventory = "0.3.1"

futures = "0.3.13"
async-trait = "0.1.50"